--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,15 @@
   "version": "0.1.0",
   "description": "Evaluate whether a LinkedIn job is worth applying to — conservative, explainable verdict.",
   "permissions": ["activeTab", "storage", "scripting", "sidePanel"],
-  "host_permissions": ["*://www.linkedin.com/*", "http://localhost:11434/*","https://generativelanguage.googleapis.com/*"],
+  "host_permissions": [
+    "*://www.linkedin.com/*",
+    "http://localhost:11434/*",
+    "https://generativelanguage.googleapis.com/*",
+    "https://api.groq.com/*",
+    "https://api.openai.com/*",
+    "https://api.anthropic.com/*",
+    "https://openrouter.ai/*"
+  ],
   "action": {
     "default_title": "Evaluate this job"
   },
