--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,31 @@
 {
   "manifest_version": 3,
   "name": "LinkedIn Job Eval",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Evaluate whether a LinkedIn job is worth applying to — conservative, explainable verdict.",
   "permissions": ["activeTab", "storage", "scripting", "sidePanel"],
-  "host_permissions": ["*://www.linkedin.com/*", "http://localhost:11434/*","https://generativelanguage.googleapis.com/*"],
+  "host_permissions": [
+    "*://www.linkedin.com/*",
+    "http://localhost:11434/*",
+    "https://api.openai.com/*",
+    "https://api.anthropic.com/*",
+    "https://openrouter.ai/*",
+    "https://generativelanguage.googleapis.com/*",
+    "https://api.groq.com/*"
+  ],
+  "icons": {
+    "16": "assets/icons/icon16.png",
+    "32": "assets/icons/icon32.png",
+    "48": "assets/icons/icon48.png",
+    "128": "assets/icons/icon128.png"
+  },
   "action": {
-    "default_title": "Evaluate this job"
+    "default_title": "Evaluate this job",
+    "default_icon": {
+      "16": "assets/icons/icon16.png",
+      "32": "assets/icons/icon32.png",
+      "48": "assets/icons/icon48.png"
+    }
   },
   "side_panel": {
     "default_path": "popup.html"
@@ -24,7 +43,8 @@
     {
       "matches": [
         "*://www.linkedin.com/jobs/view/*",
-        "*://www.linkedin.com/jobs/collections/*","*://www.linkedin.com/jobs/search/*"
+        "*://www.linkedin.com/jobs/collections/*",
+        "*://www.linkedin.com/jobs/search/*"
       ],
       "js": ["content.js"]
     }
