--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,14 @@
 {
   "manifest_version": 3,
   "name": "LinkedIn Job Eval",
-  "version": "0.1.0",
-  "description": "Evaluate whether a LinkedIn job is worth applying to — conservative, explainable verdict.",
+  "version": "1.0.0",
+  "description": "Evaluate whether a LinkedIn job is worth applying to — conservative, explainable verdict powered by AI.",
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": ["activeTab", "storage", "scripting", "sidePanel"],
   "host_permissions": [
     "*://www.linkedin.com/*",
@@ -14,7 +20,12 @@
     "https://openrouter.ai/*"
   ],
   "action": {
-    "default_title": "Evaluate this job"
+    "default_title": "Evaluate this job",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.png"
+    }
   },
   "side_panel": {
     "default_path": "popup.html"
