--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "linkedin-job-eval",
-  "version": "0.1.0",
-  "description": "AI-assisted LinkedIn job evaluation (MVP) — is this job worth applying?",
+  "version": "1.0.0",
+  "description": "AI-assisted LinkedIn job evaluation — is this job worth applying?",
   "private": true,
   "scripts": {
     "build": "node build.mjs",
-    "watch": "node build.mjs --watch"
+    "watch": "node build.mjs --watch",
+    "package": "node build.mjs && cd dist && zip -r ../linkedin-job-eval.zip . -x '*.map'"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.268",
