--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "manifest_version": 3,
-  "name": "LinkedIn Job Eval",
+  "name": "AI Job Evaluator for LinkedIn (Free)",
   "version": "1.0.0",
-  "description": "Evaluate whether a LinkedIn job is worth applying to — conservative, explainable verdict powered by AI.",
+  "description": "Evaluate LinkedIn jobs against your resume and career goals before you apply. Free, private, and user-controlled.",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": ["activeTab", "storage", "scripting", "sidePanel"],
+  "permissions": ["activeTab", "storage", "scripting", "sidePanel", "tabs"],
   "host_permissions": [
     "*://www.linkedin.com/*",
     "http://localhost:11434/*",
