--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": ["activeTab", "storage", "scripting", "sidePanel", "tabs"],
+  "permissions": ["activeTab", "scripting", "sidePanel", "tabs"],
   "host_permissions": [
     "*://www.linkedin.com/*",
     "http://localhost:11434/*",
