--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "AI Job Evaluator for LinkedIn (Free)",
-  "version": "1.0.52",
+  "version": "1.0.74",
   "description": "Evaluate LinkedIn jobs against your resume and career goals before you apply. Free, private, and user-controlled.",
   "icons": {
     "16": "icons/icon16.png",
@@ -50,7 +50,8 @@
       ],
       "js": [
         "content.js"
-      ]
+      ],
+      "all_frames": true
     }
   ]
 }
